# fundor_utilities

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  MANIFEST.in  README.md  README.rst  index.html  makefile  mkdocs.yml  pyproject.toml  runtests.py  script.py  sitemap.xml  versions.json
.github/workflows/: ci.yml  pypi.yml
docs/: 404.html  index.html  index.md  sitemap.xml
docs/views/: xls.md
docs/views/xls/: index.html
fundor_utilities/: admin.py  apps.py  exception.py  markdown_extensions.py  models.py  permissions.py
fundor_utilities/templates/: swagger-ui.html
fundor_utilities/templatetags/: __init__.py  app_tags.py  fundor_tags.py
fundor_utilities/views/: __init__.py  markdown_view.py  tcs_view.py  xlsx_view.py
fundor_utilities/views/multiform/: __init__.py  multiform_mixin.py  multiform_process.py  multiform_view.py
fundor_utilities/views/swagger/: __init__.py  swagger_openapi.py  swagger_template_view.py
search/: search_index.json
tests/: model.py  settings.py  test_views.py  urls.py
views/xls/: index.html
