[tool.poetry]
name = "fundor_utilities"
version = "3.0.0"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]
keywords = ["django", "utilities"]

homepage = "https://github.com/fundor333/fundor_utilities"
repository = "https://github.com/fundor333/fundor_utilities"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 5.0',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Internet :: WWW/HTTP',
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.1, <6.0"
openpyxl = "*"
django-csv-export = "*"
djangorestframework = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mkdocs = "*"
mkdocs-material = "*"
Pillow = "*"
CairoSVG = "*"
mike = "*"
pymdown-extensions = "*"
diagrams = "*"
mkdocs-material-extensions = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.skjold]
sources = ["pyup", "gemnasium"] # Sources to check against.
report_only = true              # Report only, always exit with zero.
cache_dir = '.skylt_cache'      # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400           # Cache max. age.
verbose = true                  # Be verbose.

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
