[tool.poetry]
name = "fundor_utilities"
version = "2.1.0"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]
keywords = ["django", "utilities"]

homepage = "https://github.com/fundor333/fundor_utilities"
repository = "https://github.com/fundor333/fundor_utilities"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 3.0',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Internet :: WWW/HTTP',
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=5.1, <6.0"
openpyxl = "*"
django-csv-export = "*"
djangorestframework = "*"
markdown = "^3.7"

[tool.group.dev.dependencies]
pytest = "^7.0.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"
Pillow = "^9.2.0"
CairoSVG = "^2.5.2"
mike = "^1.1.2"
pymdown-extensions = "^9.5"
diagrams = "^0.21.1"
mkdocs-material-extensions = "^1.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.skjold]
sources = ["pyup", "gemnasium"] # Sources to check against.
report_only = true              # Report only, always exit with zero.
cache_dir = '.skylt_cache'      # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400           # Cache max. age.
verbose = true                  # Be verbose.

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
